--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,10 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.0</version>
+			<type>jar</type>
 			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
